# cadence

./: .coveragerc  CONTRIBUTING.rst  Dockerfile  Pipfile  README.md  README.rst  ccb_presentations_2026_02_A.csv  ccb_presentations_2026_02_C.csv  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_docker.yml  docker.yml  pytest.yml  test_docker.yml
bash_scripts/: apptainer_run  docker_entry
docs/: conf.py  index.rst
notebooks/: scheduling.ipynb  scheduling_ccb-250723.ipynb  scheduling_ccb-250818.ipynb  scheduling_ccb.ipynb  scheduling_example.ipynb  scheduling_tests.ipynb  tests.ipynb
notebooks/scheduling_ccb/: scheduling_ccb-250702.ipynb  scheduling_ccb-250827.ipynb  scheduling_ccb-251103.ipynb  scheduling_ccb-260105.ipynb  scheduling_ccb-260117.ipynb  scheduling_ccb-260218.ipynb  scheduling_ccb-260304.ipynb  scheduling_ccb-260322.ipynb
notebooks/scheduling_ccb/2025/: scheduling_ccb-250804.ipynb  scheduling_ccb-250923.ipynb
src/cadence/: disk_usage.py  disk_usage_fixed.py  mscheduler.py  skeleton.py  utils.py
tests/: __init__.py  conftest.py  test_cadence.py  test_skeleton.py  test_utils.py
