[project]
name = "cadence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "ccbhelp@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "exceptiongroup>=1.3.0",
    "faker>=37.3.0",
    "holidays>=0.73",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "timeboard>=0.2.4",
    "tqdm>=4.67.1",
]

[project.scripts]
cadence = "cadence:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "pytest>=8.3.5",
]
